--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -57,6 +57,8 @@ body {
     padding: 0;
     font-family: sans-serif;
     color: #f7fafc;
+    background: #1a202c;
+
 }
 
 a {
@@ -75,13 +77,13 @@ a {
 }
 
 
-.title {
+.aside__title {
     color: #e2e8f0;
     margin-top: 1rem;
     font-size: 1.5rem;
 }
 
-.subtitle {
+.aside__subtitle {
     display: block;
     color: #a0aec0;
     margin-top: 0.5em;
@@ -102,7 +104,6 @@ a {
 /*e2e8f0*/
 aside {
     width: 22%;
-    background: #1a202c;
     padding: 0.8rem;
     display: flex;
     justify-content: space-between;
@@ -110,23 +111,23 @@ aside {
 }
 
 
-.spec {
+.aside__spec {
     margin-top: 2rem;
 }
 
-.spec li {
+.aside__spec li {
     margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.spec li .label {
+.aside__spec li .spec__label {
     color: #cbd5e0;
     padding-right: 2em;
 }
 
-.spec li span:not(.label) {
+.aside__spec li span:not(.spec__label) {
     text-align: right;
 }
 
