--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -79,11 +79,21 @@ a {
     color: var(--orange);
 }
 
+.top_bar {
+    /*background: var(--blue-100);*/
+}
+
 .big__title {
     font-size: 2em;
     color: var(--blue-700);
     position: center;
     padding: 0.3em;
+
+}
+
+.big__title + .navbar {
+    padding-right: 0.8em;
+    padding-top: 0.8em;
 }
 
 .brouse__container {
@@ -98,7 +108,7 @@ a {
     width: 18%;
     padding: 0.5em;
     margin: 0.3em;
-    border-radius: 0.25rem;
+    border-radius: 0 0 0.25rem 0.25rem;
     background: var(--blue-200);
 }
 
@@ -184,11 +194,7 @@ aside {
     height: 1.5em;
 }
 
-footer {
+.separate_two {
     display: flex;
     justify-content: space-between;
-}
-
-footer a {
-
 }
