--- a/thefractalbot_web/templates/index.html
+++ b/thefractalbot_web/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="../static/bg.png" alt="The Fractal" class="fractal">
+        <img src="{{ url_for("static", filename=fractal_src) }}" alt="The Fractal" class="fractal">
         <aside>
             <div>
                 <nav class="navbar">
@@ -53,7 +53,7 @@
             </div>
 
             {% if date %}
-                <footer>
+                <footer class="separate_two">
                     <a href="{{ url_for("daily_fractal", date=date-one_day) }}"><- Previous</a>
                     <a href="{{ url_for("daily_fractal", date=date+one_day) }}">Next -></a>
                 </footer>
