--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -64,6 +64,13 @@ table {
     --orange: #ffa500;
 }
 
+* {
+    /*border: 1px solid white !important;*/
+}
+
+:focus {
+    border: 2px solid var(--orange);
+}
 
 body {
     margin: 0;
@@ -71,7 +78,14 @@ body {
     font-family: sans-serif;
     color: var(--blue-900);
     background: var(--blue-100);
+    box-sizing: border-box;
+}
 
+.narrow_container {
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
 }
 
 a {
@@ -79,48 +93,61 @@ a {
     color: var(--orange);
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 .top_bar {
+    padding: 1.5em 1.5em;
+    align-items: center;
     /*background: var(--blue-100);*/
 }
 
 .big__title {
-    font-size: 2em;
     color: var(--blue-700);
     position: center;
-    padding: 0.3em;
-
 }
 
-.big__title + .navbar {
-    padding-right: 0.8em;
-    padding-top: 0.8em;
+.top_bar .navbar a {
+    margin-left: 2em;
+    padding: 0;
 }
+
 
 .brouse__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 1.5em;
 }
 
 .brouse__card {
     display: flex;
     flex-direction: column;
-    width: 18%;
-    padding: 0.5em;
-    margin: 0.3em;
-    border-radius: 0 0 0.25rem 0.25rem;
+    width: 24%;
+    border-radius: 0.25rem;
     background: var(--blue-200);
+    margin-bottom: 1em;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3), 0 10px 10px -5px rgba(0, 0, 0, 0.12);
 }
+
+.brouse__card:hover {
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.74);
+    z-index: 2;
+}
+
 
 .card__img {
     width: 100%;
+    border-radius: 0.25em 0.25em 0 0;
 }
 
 .card__title {
     position: center;
-    text-align: center;
-    padding-top: 0.5em;
-    color: var(--blue-700);
+    text-align: right;
+    font-size: 0.75em;
+    padding: 1em;
+    color: var(--blue-500);
 }
 
 .navbar {
