--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -66,10 +66,16 @@ table {
 
 * {
     /*border: 1px solid white !important;*/
+    border: 0 solid var(--blue-100) !important;
 }
 
 :focus {
-    border: 2px solid var(--orange);
+    border: 2px solid var(--orange) !important;
+    transition:
+            border-bottom-color 0.3s,
+            border-left-color 0.3s,
+            border-right-color 0.3s,
+            border-top-color 0.3s;
 }
 
 body {
@@ -115,19 +121,17 @@ a:hover {
 
 
 .brouse__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     padding: 0 1.5em;
+    grid-gap: 1em;
 }
 
 .brouse__card {
     display: flex;
     flex-direction: column;
-    width: 24%;
     border-radius: 0.25rem;
     background: var(--blue-200);
-    margin-bottom: 1em;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3), 0 10px 10px -5px rgba(0, 0, 0, 0.12);
 }
 
@@ -157,7 +161,7 @@ a:hover {
 }
 
 .navbar a {
-    padding: 0 0 0 0.5rem ;
+    margin: 0 0 0 0.5rem ;
 }
 
 
