--- a/thefractalbot_web/templates/brouse.html
+++ b/thefractalbot_web/templates/brouse.html
@@ -1,14 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The Fractal Bot - Web</title>
-    <link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block body %}
     <div class="narrow_container">
         <nav class="top_bar separate_two">
             <h1 class="big__title">Daily Fractals</h1>
@@ -33,6 +25,4 @@
 
         </section>
     </div>
-
-</body>
-</html>
+{% endblock %}
