--- a/thefractalbot_web/templates/index.html
+++ b/thefractalbot_web/templates/index.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The Fractal Bot - Web</title>
-    <link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block body %}
     <div class="container">
         <img src="{{ url_for("static", filename=fractal_src) }}" alt="The Fractal" class="fractal">
         <aside>
@@ -61,5 +52,4 @@
 
         </aside>
     </div>
-</body>
-</html>
+{% endblock %}
