--- a/thefractalbot_web/templates/index.html
+++ b/thefractalbot_web/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 {% block body %}
     <div class="container">
         <img src="{{ url_for("static", filename=fractal_src) }}" alt="The Fractal" class="fractal">
@@ -8,7 +8,7 @@
                     <a href="{{ url_for("latest") }}">Latest</a>
                     <a href="{{ url_for("brouse") }}">Brouse</a>
                     <a href="{{ url_for("random") }}">Random</a>
-                    <a href="about.html">About</a>
+                    <a href="{{ url_for("about") }}">About</a>
                 </nav>
 
                 <h1 class="aside__title">{{ title }}</h1>
