--- a/thefractalbot_web/templates/brouse.html
+++ b/thefractalbot_web/templates/brouse.html
@@ -11,6 +11,15 @@
                 </time>
             </a>
         {% endfor %}
-
     </section>
+
+    <footer class="brouse__footer">
+        {% if page > 0 %}
+            <a href="{{ url_for("brouse", page=page - 1) }}"><- Previous</a>
+        {% else %}
+            <span></span>
+        {% endif %}
+        <a href="{{ url_for("brouse", page=page + 1) }}">Next -></a>
+    </footer>
+
 {% endblock %}
