add readme + responsive about

--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -325,4 +325,8 @@ aside {
         min-height: 70vh;
         justify-content: space-between;
     }
+
+    .p--about {
+        width: 100%;
+    }
 }
