--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -214,6 +214,13 @@ a:hover {
     object-position: center;
 }
 
+.img_cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
 .container {
     display: flex;
 }
@@ -320,6 +327,7 @@ aside {
         width: 100%;
         height: 30vh;
     }
+    
     aside {
         width: 100%;
         min-height: 70vh;
