--- a/thefractalbot_web/templates/layouts/regular.html
+++ b/thefractalbot_web/templates/layouts/regular.html
@@ -1,15 +1,12 @@
 {% extends "layouts/base.html" %}
+{% from "macros/macros.html" import fractal, navbar %}
+
 
 {% block body %}
     <div class="narrow_container">
         <nav class="top_bar separate_two">
             <h1 class="bar__title">{{ title }}</h1>
-            <div class="navbar">
-                <a href="{{ url_for("latest") }}">Latest</a>
-                <a href="{{ url_for("brouse") }}">Brouse</a>
-                <a href="{{ url_for("random") }}">Random</a>
-                <a href="{{ url_for("about") }}">About</a>
-            </div>
+            {{ navbar() }}
         </nav>
 
         {% block content %}
