--- a/thefractalbot_web/templates/macros/macros.html
+++ b/thefractalbot_web/templates/macros/macros.html
@@ -18,3 +18,12 @@
 
 </picture>
 {% endmacro %}
+
+{% macro navbar() %}
+    <nav class="navbar">
+        <a href="{{ url_for("latest") }}">Latest</a>
+        <a href="{{ url_for("brouse") }}">Brouse</a>
+        <a href="{{ url_for("random") }}">Random</a>
+        <a href="{{ url_for("about") }}">About</a>
+    </nav>
+{% endmacro %}
