--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -54,7 +54,7 @@ table {
 @font-face {
     font-family: "Gilroy";
     src: url("/static/fonts/gilroy/Gilroy-Medium.eot");
-    src: local("☞Gilroy-Medium"), local("Gilroy-Medium"), url("/static/fonts/gilroy/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Medium.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Medium.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Medium.ttf") format("truetype");
+    src: local("Gilroy Medium"), local("Gilroy-Medium"), url("/static/fonts/gilroy/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Medium.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Medium.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
@@ -65,8 +65,17 @@ table {
 @font-face {
     font-family: "Gilroy";
         src: url("/static/fonts/gilroy/Gilroy-Bold.eot");
-        src: local("☞Gilroy-Bold"), local("Gilroy-Bold"), url("/static/fonts/gilroy/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Bold.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Bold.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Bold.ttf") format("truetype");
+        src: local("Gilroy Bold"), local("Gilroy-Bold"), url("/static/fonts/gilroy/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Bold.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Bold.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Bold.ttf") format("truetype");
     font-weight: bold;
+    font-style: normal;
+}
+
+/* Gilroy FAT*/
+@font-face {
+    font-family: "Gilroy";
+    src: url("/static/fonts/gilroy/Gilroy-Black.eot");
+    src: local("Gilroy Black"), local("Gilroy-Black"), url("/static/fonts/gilroy/Gilroy-Black.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Black.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Black.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Black.ttf") format("truetype");
+    font-weight: 900;
     font-style: normal;
 }
 
@@ -110,6 +119,7 @@ body {
     padding: 0;
     font-family: "Gilroy", sans-serif;
     color: var(--blue-900);
+    min-height: 100vh;
     background: var(--blue-100);
 }
 
@@ -118,7 +128,6 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0 auto 2rem auto;
-
 }
 
 a {
@@ -185,6 +194,7 @@ a:hover {
 .navbar {
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
 }
 
@@ -293,6 +303,63 @@ aside {
     font-weight: bold;
 }
 
+.generate {
+    width: 60%;
+    height: 100%;
+    margin: 0 auto;
+    /*margin: 20% auto 0 auto;*/
+    text-align: center;
+}
+form {
+    margin-top: 2rem;
+}
+
+.generate__title {
+    margin-top: 20%;
+    font-size: 5em;
+    font-weight: bold;
+}
+
+.generate_input {
+    height: 3em;
+    width: 100%;
+    border-radius: 1.5em;
+    padding: 0.5em 1.5em;
+}
+
+.generate__fractal {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
+.gen__img {
+
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: radial-gradient(circle closest-side, rgba(26, 32, 44, 0) 85%, rgba(26, 32, 44, 0.8) 90%, rgba(26, 32, 44, 1));
+}
+
+.container--overlay {
+    position: relative;
+    display: block;
+    width: 150px;
+    height: 150px;
+}
+
+picture {
+    display: block;
+}
 
 @media (max-width: 640px) {
     .top_bar {
@@ -337,3 +404,4 @@ aside {
         width: 100%;
     }
 }
+
