--- a/thefractalbot_web/static/style.css
+++ b/thefractalbot_web/static/style.css
@@ -325,19 +325,40 @@ form {
     width: 100%;
     border-radius: 1.5em;
     padding: 0.5em 1.5em;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.8);
+    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.8),*/
+    /*            -3px -3px 5px 3px rgba(255, 255, 255, 0.4);*/
+}
+
+.gen__img {
+
+}
+
+.bubble {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    z-index: -5;
+    will-change: auto;
+}
+
+.container--overlay {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .generate__fractal {
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
 }
 
 .gen__img {
-
+    border-radius: 100%;
 }
 
 .overlay {
@@ -347,14 +368,7 @@ form {
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: radial-gradient(circle closest-side, rgba(26, 32, 44, 0) 85%, rgba(26, 32, 44, 0.8) 90%, rgba(26, 32, 44, 1));
-}
-
-.container--overlay {
-    position: relative;
-    display: block;
-    width: 150px;
-    height: 150px;
+    background: radial-gradient(circle closest-side, rgba(26, 32, 44, 0) 90%, rgba(26, 32, 44, 1) 100%, rgba(26, 32, 44, 0) 101%);
 }
 
 picture {
