--- a/thefractalbot_web/templates/layouts/regular.html
+++ b/thefractalbot_web/templates/layouts/regular.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="narrow_container">
         <nav class="top_bar separate_two">
-            <h1 class="bar__title">{{ title }}</h1>
+            <a href="{{ url_for("generate") }}" class="bar__title hitbox">The Fractal Bot</a>
             {{ navbar() }}
         </nav>
 
